// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateRecipe should return the previously calculated result that has been compared with brauhaus for realRecipe 1`] = `
Object {
  "abv": 5.605608592259691,
  "abw": 4.362808396595539,
  "agingDays": 14,
  "agingTemp": 20,
  "author": "Anonymous Brewer",
  "batchSize": 20,
  "boilEndTime": null,
  "boilSize": 10,
  "boilStartTime": null,
  "bottlingPressure": 0,
  "bottlingTemp": 0,
  "brewDayDuration": null,
  "buToGu": 0.16205090259229468,
  "bv": 0.32970682114403704,
  "calories": 189.4172048409443,
  "color": 3.9753152044771203,
  "description": "Recipe description",
  "est_abv": 0,
  "est_color": 0,
  "est_fg": 0,
  "est_og": 0,
  "fermentables": Array [
    Object {
      "color": 2.5,
      "late": false,
      "name": "Extra pale extract",
      "weight": 4,
      "yield": 75,
    },
  ],
  "fg": 1.0150413186471412,
  "fgPlato": 3.834502393229826,
  "ibu": 9.374843319028964,
  "ibuMethod": "tinseth",
  "mash": null,
  "mashEfficiency": 75,
  "name": "Test Recipe",
  "notes": "",
  "og": 1.0578512255659274,
  "ogPlato": 14.2395151716224,
  "price": 25.100086182652795,
  "primaryDays": 14,
  "primaryTemp": 20,
  "primingCornSugar": 0.12961975028595002,
  "primingDme": 0.17271702105852554,
  "primingHoney": 0.15877900931027733,
  "primingSugar": 0.11794749177270022,
  "realExtract": 5.715728703563204,
  "secondaryDays": 0,
  "secondaryTemp": 0,
  "servingSize": 0.355,
  "spices": Array [
    Object {
      "aa": 4.5,
      "form": "pellet",
      "name": "Cascade hops",
      "time": 60,
      "use": "boil",
      "weight": 0.028349556839727483,
    },
  ],
  "steepEfficiency": 50,
  "steepTime": 20,
  "style": null,
  "tertiaryDays": 0,
  "tertiaryTemp": 0,
  "timelineMap": Object {
    "drySpice": Object {},
    "fermentables": Object {
      "boil": Array [
        Object {
          "fermentable": Object {
            "color": 2.5,
            "late": false,
            "name": "Extra pale extract",
            "weight": 4,
            "yield": 75,
          },
          "gravity": 57.851225565927294,
        },
      ],
      "boilEnd": Array [],
      "mash": Array [],
      "steep": Array [],
    },
    "times": Object {
      "60": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 4.5,
            "form": "pellet",
            "name": "Cascade hops",
            "time": 60,
            "use": "boil",
            "weight": 0.028349556839727483,
          },
        },
      ],
    },
    "yeast": Array [
      Object {
        "attenuation": 74,
        "form": "liquid",
        "name": "Wyeast 3052",
        "type": "ale",
      },
    ],
  },
  "type": "Extract",
  "yeast": Array [
    Object {
      "attenuation": 74,
      "form": "liquid",
      "name": "Wyeast 3052",
      "type": "ale",
    },
  ],
}
`;

exports[`calculateRecipe should return the previously calculated result that has been compared with brauhaus for realRecipe2 1`] = `
Object {
  "abv": 6.66787000045513,
  "abw": 5.217281169705499,
  "agingDays": 14,
  "agingTemp": 20,
  "author": "danielgtaylor",
  "batchSize": 18.92705,
  "boilEndTime": null,
  "boilSize": 11.35623,
  "boilStartTime": null,
  "bottlingPressure": 0,
  "bottlingTemp": 0,
  "brewDayDuration": null,
  "buToGu": 0.29477790462738984,
  "bv": 0.7577838165228565,
  "calories": 195.00369800581186,
  "color": 10.100670100120798,
  "description": "Recipe description",
  "est_abv": 0,
  "est_color": 0,
  "est_fg": 0,
  "est_og": 0,
  "fermentables": Array [
    Object {
      "color": 10,
      "late": false,
      "name": "Munich liquid extract",
      "weight": 2.26795,
      "yield": 75.7346258709,
    },
    Object {
      "color": 3,
      "late": false,
      "name": "Wheat liquid extract",
      "weight": 1.36077,
      "yield": 75.7346258709,
    },
    Object {
      "color": 1,
      "late": false,
      "name": "Pilsner malt (steeped)",
      "weight": 0.226795,
      "yield": 73.5707794175,
    },
    Object {
      "color": 34,
      "late": false,
      "name": "Caramunich (steeped)",
      "weight": 0.226795,
      "yield": 75.7346258709,
    },
    Object {
      "color": 19,
      "late": false,
      "name": "Aromatic (steeped)",
      "weight": 0.1133975,
      "yield": 73.5707794175,
    },
  ],
  "fg": 1.0096479620355394,
  "fgPlato": 2.4702525351549127,
  "ibu": 17.775037704755917,
  "ibuMethod": "tinseth",
  "mash": null,
  "mashEfficiency": 75,
  "name": "Aramis Saison",
  "notes": "",
  "og": 1.060299762722122,
  "ogPlato": 14.811879572286813,
  "price": 33.94436787172289,
  "primaryDays": 14,
  "primaryTemp": 20,
  "primingCornSugar": 0.12961975028595002,
  "primingDme": 0.17271702105852554,
  "primingHoney": 0.15877900931027733,
  "primingSugar": 0.11794749177270022,
  "realExtract": 4.70161870346836,
  "secondaryDays": 0,
  "secondaryTemp": 0,
  "servingSize": 0.355,
  "spices": Array [
    Object {
      "aa": 8.1,
      "form": "Pellet",
      "name": "Aramis hops",
      "time": 60,
      "use": "Boil",
      "weight": 0.0212615166549,
    },
    Object {
      "aa": 8.1,
      "form": "Pellet",
      "name": "Aramis hops",
      "time": 60,
      "use": "Boil",
      "weight": 0.00708717221828,
    },
  ],
  "steepEfficiency": 50,
  "steepTime": 20,
  "style": Object {
    "abv": Array [
      0,
      14,
    ],
    "carb": Array [
      1,
      4,
    ],
    "color": Array [
      0,
      500,
    ],
    "fg": Array [
      1,
      1.15,
    ],
    "ibu": Array [
      0,
      150,
    ],
    "og": Array [
      1,
      1.15,
    ],
  },
  "tertiaryDays": 0,
  "tertiaryTemp": 0,
  "timelineMap": Object {
    "drySpice": Object {},
    "fermentables": Object {
      "boil": Array [
        Object {
          "fermentable": Object {
            "color": 10,
            "late": false,
            "name": "Munich liquid extract",
            "weight": 2.26795,
            "yield": 75.7346258709,
          },
          "gravity": 34.99986227652088,
        },
        Object {
          "fermentable": Object {
            "color": 3,
            "late": false,
            "name": "Wheat liquid extract",
            "weight": 1.36077,
            "yield": 75.7346258709,
          },
          "gravity": 20.99991736591253,
        },
      ],
      "boilEnd": Array [],
      "mash": Array [],
      "steep": Array [
        Object {
          "fermentable": Object {
            "color": 1,
            "late": false,
            "name": "Pilsner malt (steeped)",
            "weight": 0.226795,
            "yield": 73.5707794175,
          },
          "gravity": 1.699993310575126,
        },
        Object {
          "fermentable": Object {
            "color": 34,
            "late": false,
            "name": "Caramunich (steeped)",
            "weight": 0.226795,
            "yield": 75.7346258709,
          },
          "gravity": 1.749993113826044,
        },
        Object {
          "fermentable": Object {
            "color": 19,
            "late": false,
            "name": "Aromatic (steeped)",
            "weight": 0.1133975,
            "yield": 73.5707794175,
          },
          "gravity": 0.849996655287563,
        },
      ],
    },
    "times": Object {
      "60": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 8.1,
            "form": "Pellet",
            "name": "Aramis hops",
            "time": 60,
            "use": "Boil",
            "weight": 0.0212615166549,
          },
        },
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 8.1,
            "form": "Pellet",
            "name": "Aramis hops",
            "time": 60,
            "use": "Boil",
            "weight": 0.00708717221828,
          },
        },
      ],
    },
    "yeast": Array [
      Object {
        "attenuation": 84,
        "form": "Liquid",
        "name": "WLP560 - Classic Saison Ale Blend",
        "type": "Ale",
      },
    ],
  },
  "type": "Extract",
  "yeast": Array [
    Object {
      "attenuation": 84,
      "form": "Liquid",
      "name": "WLP560 - Classic Saison Ale Blend",
      "type": "Ale",
    },
  ],
}
`;

exports[`calculateRecipe should return the previously calculated result that has been compared with brauhaus for realRecipe3 1`] = `
Object {
  "abv": 5.950448110630616,
  "abw": 4.626909510825387,
  "agingDays": 14,
  "agingTemp": 20,
  "author": "Anonymous Brewer",
  "batchSize": 20,
  "boilEndTime": null,
  "boilSize": 10,
  "boilStartTime": null,
  "bottlingPressure": 0,
  "bottlingTemp": 0,
  "brewDayDuration": null,
  "buToGu": 0.1429215436342331,
  "bv": 0.29078645703811445,
  "calories": 201.16345092414744,
  "color": 8.445571409922096,
  "description": "Recipe description",
  "est_abv": 0,
  "est_color": 0,
  "est_fg": 0,
  "est_og": 0,
  "fermentables": Array [
    Object {
      "color": 2.5,
      "late": false,
      "name": "Extra pale extract",
      "weight": 4,
      "yield": 75,
    },
    Object {
      "color": 40,
      "late": false,
      "name": "Caramel 40L",
      "weight": 0.5,
      "yield": 75,
    },
  ],
  "fg": 1.0159814010625874,
  "fgPlato": 4.071073648471582,
  "ibu": 8.78494811270295,
  "ibuMethod": "tinseth",
  "mash": null,
  "mashEfficiency": 75,
  "name": "Test Recipe",
  "notes": "",
  "og": 1.0614669271637978,
  "ogPlato": 15.083846640039212,
  "price": 27.300086182652795,
  "primaryDays": 10,
  "primaryTemp": 20,
  "primingCornSugar": 0.12961975028595002,
  "primingDme": 0.17271702105852554,
  "primingHoney": 0.15877900931027733,
  "primingSugar": 0.11794749177270022,
  "realExtract": 6.06218300534701,
  "secondaryDays": 5,
  "secondaryTemp": 0,
  "servingSize": 0.355,
  "spices": Array [
    Object {
      "aa": 4.5,
      "form": "pellet",
      "name": "Cascade hops",
      "time": 60,
      "use": "boil",
      "weight": 0.028349556839727483,
    },
  ],
  "steepEfficiency": 50,
  "steepTime": 20,
  "style": null,
  "tertiaryDays": 0,
  "tertiaryTemp": 0,
  "timelineMap": Object {
    "drySpice": Object {},
    "fermentables": Object {
      "boil": Array [
        Object {
          "fermentable": Object {
            "color": 2.5,
            "late": false,
            "name": "Extra pale extract",
            "weight": 4,
            "yield": 75,
          },
          "gravity": 57.851225565927294,
        },
      ],
      "boilEnd": Array [],
      "mash": Array [],
      "steep": Array [
        Object {
          "fermentable": Object {
            "color": 40,
            "late": false,
            "name": "Caramel 40L",
            "weight": 0.5,
            "yield": 75,
          },
          "gravity": 3.615701597870456,
        },
      ],
    },
    "times": Object {
      "60": Array [
        Object {
          "bitterness": 0,
          "spice": Object {
            "aa": 4.5,
            "form": "pellet",
            "name": "Cascade hops",
            "time": 60,
            "use": "boil",
            "weight": 0.028349556839727483,
          },
        },
      ],
    },
    "yeast": Array [
      Object {
        "attenuation": 74,
        "form": "liquid",
        "name": "Wyeast 3052",
        "type": "ale",
      },
    ],
  },
  "type": "Extract",
  "yeast": Array [
    Object {
      "attenuation": 74,
      "form": "liquid",
      "name": "Wyeast 3052",
      "type": "ale",
    },
  ],
}
`;
